typescript/checker/tests/conformance/classes/members/inheritanceAndOverriding/derivedClassWithAny.ts.stderr
error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            863,
        ),
        hi: BytePos(
            864,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/classes/members/inheritanceAndOverriding/derivedClassWithAny.ts:52:5
   |
52 | var c: C;
   |     ^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            874,
        ),
        hi: BytePos(
            875,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/classes/members/inheritanceAndOverriding/derivedClassWithAny.ts:53:5
   |
53 | var d: D;
   |     ^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            885,
        ),
        hi: BytePos(
            886,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/classes/members/inheritanceAndOverriding/derivedClassWithAny.ts:54:5
   |
54 | var e: E;
   |     ^

error: unimplemented
expand_export_info(D)
File: $DIR/tests/conformance/classes/members/inheritanceAndOverriding/derivedClassWithAny.ts
  --> $DIR/tests/conformance/classes/members/inheritanceAndOverriding/derivedClassWithAny.ts:56:1
   |
56 | c = d;
   | ^^^^^

error: unimplemented
expand_export_info(E)
File: $DIR/tests/conformance/classes/members/inheritanceAndOverriding/derivedClassWithAny.ts
  --> $DIR/tests/conformance/classes/members/inheritanceAndOverriding/derivedClassWithAny.ts:57:1
   |
57 | c = e;
   | ^^^^^

error: NoCallSignature {
    span: Span {
        lo: BytePos(
            919,
        ),
        hi: BytePos(
            923,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/classes/members/inheritanceAndOverriding/derivedClassWithAny.ts:58:10
   |
58 | var r = c.foo(); // e.foo would return string
   |          ^^^^

